--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,3 +12,15 @@
  *= require_tree .
  */
 @import "bootstrap";
+
+#blackout {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index:100;
+    background-color: #000;
+    opacity: 0.7;
+    display: none;
+}
