--- a/app/views/photos/_form_modal.html.erb
+++ b/app/views/photos/_form_modal.html.erb
@@ -1,27 +1,23 @@
-<div class="modal fade" id="tack_new" tabindex="-1" role="dialog" aria-labelledby="tack_new_label" aria-hidden="true">
+<div class="modal fade" id="photo_new" tabindex="-1" role="dialog" aria-labelledby="photo_new_label" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="tack_new_label">Create new tack</h4>
+                <h4 class="modal-title" id="photo_new_label">Add new photo</h4>
             </div>
-            <%= form_for [@board, @tack] do |f| %>
+            <%= form_for [@board, @tack, @photo], :html => { :multipart => true } do |f| %>
             <div class="modal-body">
                 <div class="form-group">
-                    <%= f.label :name %>
-                    <%= f.text_field :name, :class => "form-control" %>
+                    <%= f.label :title %>
+                    <%= f.text_field :title, :class => "form-control" %>
                 </div>
                 <div class="form-group">
                     <%= f.label :description %>
-                    <%= f.text_field :description, :class => "form-control", :placeholder => '(optional)' %>
+                    <%= f.text_field :description, :class => "form-control" %>
                 </div>
                 <div class="form-group">
-                    <%= f.label :top %>
-                    <%= f.number_field :top, :class => "form-control" %>
-                </div>
-                <div class="form-group">
-                    <%= f.label :left %>
-                    <%= f.number_field :left, :class => "form-control" %>
+                    <%= f.label :image %>
+                    <%= f.file_field :image, :class => "form-control" %> 
                 </div>
             </div>
                 <div class="modal-footer">
@@ -32,3 +28,4 @@
         </div>
     </div>
 </div>
+
