--- a/app/views/photos/_form_modal.html.erb
+++ b/app/views/photos/_form_modal.html.erb
@@ -21,8 +21,8 @@
                 </div>
             </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <%= f.submit "Create", :class => "btn btn-primary" %>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <%= f.submit 'Add photo', :class => "btn btn-primary" %>
                 </div>
             <% end %>
         </div>
