--- a/app/views/tacks/_form_modal.html.erb
+++ b/app/views/tacks/_form_modal.html.erb
@@ -3,10 +3,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="tack_new_label">Create new tack</h4>
+                <h4 class="modal-title" id="tack_new_label">Add new tack</h4>
             </div>
             <%= form_for [@board, @tack] do |f| %>
             <div class="modal-body">
+                <%= render 'shared/error_messages', object: f.object %>
                 <div class="form-group">
                     <%= f.label :name %>
                     <%= f.text_field :name, :class => "form-control" %>
@@ -25,8 +26,8 @@
                 </div>
             </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <%= f.submit "Create", :class => "btn btn-primary" %>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <%= f.submit "Add tack", :class => "btn btn-primary" %>
                 </div>
             <% end %>
         </div>
